[tool.poetry]
name = "dmm-logging"
version = "0.1.0"
description = "Scripts to log data from DMMs"
authors = ["Alson van der Meulen <git@alm.nufan.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
adafruit_bme280 = "^1.0.1"
python-vxi11 = {git = "git@github.com:alson/python-vxi11.git"}
python-ivi = {git = "git@github.com:alson/python-ivi.git", rev = "staging"}
quantiphy = "^2.17"
numpy = ">=1.24"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
black = ">=26.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
